Style(Timeline Modals): Fix Overflow Style

--- a/src/assets/css/UsersListModal.module.css
+++ b/src/assets/css/UsersListModal.module.css
@@ -62,5 +62,5 @@ p {
     height: 37vh;
     overflow-y: auto;
     padding-left: 15px;
-    margin-top: 20px;
+    margin-top: 15px;
 }
